<resources>
    <string name="app_name">Inventory System</string>
    <string name="Title_login">Inventory Control</string>
    <string name="title_welcome_back">Welcome Back!</string>
    <string name="subtitle_sign_in">Please sign in to continue</string>
    <string name="label_username">Username</string>
    <string name="hint_username">admin123</string>
    <string name="label_password">Password</string>
    <string name="hint_password">••••••••</string>
    <string name="action_sign_in">Sign In</string>
    <string name="desc_settings_button">Settings</string>
    <string name="greeting_welcome">Welcome Jhon Doe</string>
    <string name="geeting_role">Operator</string>
    <string name="label_menu">Menu:</string>
    <string name="menu_stock_in">Stock In</string>
    <string name="menu_stock_preparation">Stock Preparation</string>
    <string name="menu_stock_taking">Stock Taking</string>
    <string name="menu_tag_registration">Tag Registration</string>
    <string name="menu_search_item">Search Item</string>
    <string name="desc_user_profile_menu">User profile menu</string>
    <string name="descsync_offline_data">Sync offline data</string>
    <string name="title_stock_registration">Tag Registration</string>
    <string name="label_scanned_0">Scanned : 0</string>
    <string name="title_list_tag">List Tag:</string>
    <string name="action_clear">Clear</string>
    <string name="action_save">Save</string>
    <string name="desc_back">Back</string>
    <string name="title_search_item">Search Item</string>
    <string name="title_list_product">List Product:</string>
    <string name="hint_search_item">Search item here...</string>
    <string name="label_rfid">RFID</string>
    <string name="label_distance">Distance</string>
    <string name="label_power">Power</string>
    <string name="action_stop_searching">Stop Searching</string>
    <string name="label_locating">Locating: %1$s</string>
    <string name="label_rssi_default">-00 dBm</string>
    <string name="title_stock_in">Stock IN</string>
    <string name="hint_location">Location</string>
    <string name="label_scanned_count">Scanned : 0</string>
    <string name="tab_list_product">List Product</string>
    <string name="tab_sum_product">Sum Product</string>
    <string name="desc_location_arrow">Location Dropdown</string>
    <string name="action_refresh">Refresh</string>
    <string name="label_no_do">No : DO-1234-123</string>
    <string name="label_date_do">Date : 12-12-2012</string>
    <string name="title_stock_prep_do">List Delivery Order:</string>
    <string name="title_stock_taking_adj">Stock Taking &amp; Adj</string>
    <string name="label_note">Note:</string>
    <string name="hint_type_note">Type note here...</string>
    <string name="dialog_msg_logout">Are you sure you want to Logout?</string>
    <string name="action_yes">Yes</string>
    <string name="action_no">No</string>
    <string name="label_or">Or</string>
    <string name="dialog_msg_adj">What Is Your Choice?</string>
    <string name="action_remove">Remove</string>
    <string name="label_faq">FAQ</string>
    <string name="action_add">Add Manual</string>
    <string name="label_add_faq">Add Manual:</string>
    <string name="label_add_faq_fill">Add item outside the application</string>
    <string name="label_remove_faq">Remove:</string>
    <string name="label_remove_faq_fill">Delete item from the application</string>
    <string name="label_loading_screen">Loading, please wait...</string>
    <string name="label_title_dialog_manual_add">Manual Add Item</string>
    <string name="hint_manual_item_id">Masukkan Item ID</string>
    <string name="hint_manual_remark">Notes / Remark</string>
    <string name="action_batal">Batal</string>
    <string name="action_simpan">Simpan</string>
    <string name="logo_warning">Logo warning</string>
    <string name="label_register_tags">Register Tags?</string>
    <string name="desc_label">Make sure the scanned tag is correct.</string>
    <string name="action_register">Register</string>
    <string name="title_setting">Set your IP Network</string>
    <string name="hint_url_setting">http://1.2.3.4:1234/</string>
    <string name="desc_ceklis">desc_ceklis</string>
    <string name="action_apply">Apply</string>
    <string name="do_no">[DO NO]</string>
    <string name="do_name">[DO name]</string>
    <string name="icon_location">icon location</string>
    <string name="tv_product_name">[Product name]</string>
    <string name="tv_qty">Qty: 1</string>
    <string name="tv_location">[Location]</string>
    <string name="tv_tag_id">[Tag ID]</string>
    <string name="tv_product_id">[product ID]</string>
    <string name="desc_logo_apl">logo_apl</string>
    <string name="label_welcome_launch">Welcome!</string>
    <string name="launch_version1">Beta V01.R00.00</string>
    <string name="tvlokationstocktaking">Location: Plant 2</string>
    <string name="qtystocktakingadj">Qty: 0/100</string>
    <string name="etstock_taking">Stock Taking</string>
    <string name="desc_scan_camera">Scan barcode using camera</string>
    <string name="title_scan_camera">Scan Tag Barcode</string>
    <string name="scan_hint">Point the camera at the barcode</string>
    <string name="desc_close">Tutup</string>
    <string name="desc_torch">Senter</string>
    <string name="app_tagline">RFID Warehouse Management</string>
    <string name="label_empty_no_data">No data available</string>
    <string name="label_empty_scan_hint">Start scanning items</string>
    <string name="label_empty_no_logs">No logs found</string>
    <string name="label_empty_no_sessions">No active sessions</string>
    <string name="label_empty_no_do">No delivery orders</string>
    <string name="label_empty_no_items">No items found</string>
    <string name="label_empty_no_tags">No tags scanned yet</string>
    <string name="menu_title">Menu</string>
    <string name="menu_stock_in_desc">Terima &amp; catat barang masuk</string>
    <string name="menu_stock_preparation_desc">Siapkan order &amp; picking</string>
    <string name="menu_tag_registration_desc">Daftarkan RFID tag baru</string>
    <string name="menu_stock_taking_desc">Hitung &amp; audit stok</string>
    <string name="menu_search_item_desc">Cari &amp; lacak item</string>
</resources>