<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0a0d10"
    android:fitsSystemWindows="true">

    <androidx.camera.view.PreviewView
        android:id="@+id/previewView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <View
        android:id="@+id/viewfinderCorners"
        android:layout_width="240dp"
        android:layout_height="240dp"
        android:background="@drawable/bg_viewfinder_corners"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/scan_hint"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:fontFamily="@font/raleway_bold"
        app:layout_constraintTop_toBottomOf="@id/viewfinderCorners"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/btnClose"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:padding="9dp"
        android:src="@drawable/ic_close"
        android:background="@drawable/bg_circle_translucent"
        android:contentDescription="@string/desc_close"
        android:clickable="true"
        android:focusable="true"
        app:tint="#ffffff"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/title_scan_camera"
        android:gravity="center"
        android:textColor="#ffffff"
        android:textSize="16sp"
        android:fontFamily="@font/raleway_bold"
        app:layout_constraintStart_toEndOf="@id/btnClose"
        app:layout_constraintEnd_toStartOf="@id/btnTorch"
        app:layout_constraintTop_toTopOf="@id/btnClose"
        app:layout_constraintBottom_toBottomOf="@id/btnClose" />

    <ImageView
        android:id="@+id/btnTorch"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="12dp"
        android:layout_marginTop="12dp"
        android:padding="9dp"
        android:src="@drawable/ic_flash"
        android:background="@drawable/bg_circle_translucent"
        android:contentDescription="@string/desc_torch"
        android:clickable="true"
        android:focusable="true"
        app:tint="#ffffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>