<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="30dp"
    android:elevation="10dp"
    android:layout_margin="30dp"
    app:cardBackgroundColor="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:padding="20dp">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:contentDescription="@string/logo_warning"
            android:src="@drawable/ic_warning"
            app:tint="@color/blue_theme"/>

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="10dp"
            android:paddingTop="15dp"
            android:text="@string/label_register_tags"
            android:textSize="18sp"
            android:fontFamily="@font/raleway_bold"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:textColor="@color/black"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/desc_label"
            android:textSize="12sp"
            android:fontFamily="@font/raleway_regular"
            android:textAlignment="center"
            android:layout_marginTop="5dp"
            android:layout_gravity="center"
            android:textColor="@color/text_grey"
            tools:ignore="TextContrastCheck" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:paddingHorizontal="10dp"
            android:weightSum="2">

            <Button
                android:id="@+id/btnNo"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:backgroundTint="#7A7C7D"
                android:fontFamily="@font/raleway_bold"
                android:text="@string/dialog_cancel"
                android:textSize="15sp"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:cornerRadius="20dp"
                tools:ignore="all" />

            <Button
                android:id="@+id/btnSave"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:fontFamily="@font/raleway_bold"
                android:backgroundTint="@color/green_button"
                android:stateListAnimator="@null"
                android:text="@string/action_register"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:cornerRadius="20dp"
                tools:ignore="TextContrastCheck,VisualLintButtonSize"/>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>